fix: list spacing

--- a/@library/content.css
+++ b/@library/content.css
@@ -66,8 +66,11 @@ p a {
 
 li {
 	text-wrap: balance;
-	margin-bottom: 1em;
+	margin-bottom: 0.5rem;
 	list-style: hebrew;
+}
+li p {
+  margin: 0;
 }
 
 /* syntax highlighted code */
